Fix empty item extra displaying the contrast background

--- a/style/component/inventory/Item.scss
+++ b/style/component/inventory/Item.scss
@@ -405,7 +405,7 @@ $z-index-loading: 1000;
 			}
 		}
 
-		&-empty {
+		&--empty {
 			&::before {
 				background: none;
 				position: relative;
